--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource: 
-    url: jdbc:mysql://localhost:3306/libreria_spring?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/libreria_spring?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver 
